--- a/responses/00.1_steps.md
+++ b/responses/00.1_steps.md
@@ -90,3 +90,5 @@ All the services should be up and running in less than five minutes and then you
 The discount coupon feature adds the following element to the checkout view:
 
 ![WebSPA checkout page view, highlighting the discount coupon input.](media/discount-coupon-feature.png)
+
+**Close this issue when ready to proceed and I'll reply with the next steps.**
